force-app/main/default/objects/Client_Acceptance_Form__c/fields/mlra14__c.field-meta.xml
<CustomField>
    <fullName>mlra14__c</fullName>
    <description>A “Yes” answer to either of the above means the client must be treated as high risk and Enhanced Due Diligence (EDD) procedures as set out in the firm’s Client Acceptance Guidance Notes (available on the intranet) applied. 

Record EDD procedures undertaken below:</description>
    <label>Record EDD procedures undertaken below:</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>