force-app/main/default/objects/Client_Acceptance_Form__c/fields/mlrapick12__c.field-meta.xml
<CustomField>
    <fullName>mlrapick12__c</fullName>
    <description>Is the client a Politically Exposed Person (PEP) ?</description>
    <label>Is the client a Politically Exposed Pers</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>