force-app/main/default/objects/Client_Acceptance_Form__c/fields/mlrapick13__c.field-meta.xml
<CustomField>
    <fullName>mlrapick13__c</fullName>
    <description>Are any family members or close associates of the client PEPs ?</description>
    <inlineHelpText>Are any family members or close associates of the client PEPs ?</inlineHelpText>
    <label>Are any family members or close associat</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>