force-app/main/default/objects/Client_Acceptance_Form__c/fields/mlrapick15__c.field-meta.xml
<CustomField>
    <fullName>mlrapick15__c</fullName>
    <description>Considering the above factors, the risk of money laundering is:</description>
    <label>Considering the above factors, the risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>