force-app/main/default/objects/Client_Acceptance_Form__c/fields/Name_of_current_advisor__c.field-meta.xml
<CustomField>
    <fullName>Name_of_current_advisor__c</fullName>
    <label>Name of current advisor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>