force-app/main/default/objects/Client_Acceptance_Form__c/fields/Nature_activity_of_client__c.field-meta.xml
<CustomField>
    <fullName>Nature_activity_of_client__c</fullName>
    <label>Nature activity of client</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>