force-app/main/default/objects/Client_Acceptance_Form__c/fields/Nature_of_assignment__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_assignment__c</fullName>
    <label>Nature of assignment</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>