force-app/main/default/objects/Client_Acceptance_Form__c/fields/Net_Assets_excluding_goodwill__c.field-meta.xml
<CustomField>
    <fullName>Net_Assets_excluding_goodwill__c</fullName>
    <label>Net Assets (excluding goodwill)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>