force-app/main/default/objects/Client_Acceptance_Form__c/fields/Net_Operating_Assets__c.field-meta.xml
<CustomField>
    <fullName>Net_Operating_Assets__c</fullName>
    <label>Net Operating Assets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>