force-app/main/default/objects/Client_Acceptance_Form__c/fields/NI_Number__c.field-meta.xml
<CustomField>
    <fullName>NI_Number__c</fullName>
    <label>NI Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>