force-app/main/default/objects/Client_Acceptance_Form__c/fields/objpick1__c.field-meta.xml
<CustomField>
    <fullName>objpick1__c</fullName>
    <description>Do we already act for any parties involved or have we acted in the past?</description>
    <label>Do we already act for any parties involv</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>