force-app/main/default/objects/Client_Acceptance_Form__c/fields/objpick2__c.field-meta.xml
<CustomField>
    <fullName>objpick2__c</fullName>
    <description>Has any CP team member a family relationship or other close involvement with any party?</description>
    <label>Has any CP team member a family relation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>