force-app/main/default/objects/Client_Acceptance_Form__c/fields/objpick3__c.field-meta.xml
<CustomField>
    <fullName>objpick3__c</fullName>
    <description>Are there any other relationships or other issues which may threaten our objectivity or could be perceived to do so?</description>
    <label>Are there any other relationships or oth</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>