force-app/main/default/objects/Client_Acceptance_Form__c/fields/objpickyes1__c.field-meta.xml
<CustomField>
    <fullName>objpickyes1__c</fullName>
    <description>If yes, please give details below:</description>
    <label>If yes, please give details below:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>