force-app/main/default/objects/Client_Acceptance_Form__c/fields/objpickyes7__c.field-meta.xml
<CustomField>
    <fullName>objpickyes7__c</fullName>
    <description>If yes, please summarise below.</description>
    <label>If yes, please summarise below.</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>