force-app/main/default/objects/Client_Acceptance_Form__c/fields/objpickyes8__c.field-meta.xml
<CustomField>
    <fullName>objpickyes8__c</fullName>
    <description>If yes, please describe below:</description>
    <label>If yes, please describe below:</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>