force-app/main/default/objects/Client_Acceptance_Form__c/fields/orpick1__c.field-meta.xml
<CustomField>
    <fullName>orpick1__c</fullName>
    <description>Is there public interest in the client?</description>
    <label>Is there public interest in the client?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>