force-app/main/default/objects/Client_Acceptance_Form__c/fields/orpick1yes__c.field-meta.xml
<CustomField>
    <fullName>orpick1yes__c</fullName>
    <description>If yes, please detail below why you are happy to proceed :</description>
    <label>If yes, please detail below why you are</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>