force-app/main/default/objects/Client_Acceptance_Form__c/fields/orpick2__c.field-meta.xml
<CustomField>
    <fullName>orpick2__c</fullName>
    <description>Are we being invited to act for only part of a relationship/group ?</description>
    <inlineHelpText>Are we being invited to act for only part of a relationship/group ?</inlineHelpText>
    <label>Are we being invited to act for only par</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>