force-app/main/default/objects/Client_Acceptance_Form__c/fields/orpick2yes__c.field-meta.xml
<CustomField>
    <fullName>orpick2yes__c</fullName>
    <description>If yes, why ?</description>
    <label>If yes, why?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>