force-app/main/default/objects/Client_Acceptance_Form__c/fields/orpick3__c.field-meta.xml
<CustomField>
    <fullName>orpick3__c</fullName>
    <description>Can we demonstrate our competence to perform the proposed work ?</description>
    <label>Can we demonstrate our competence to per</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>