force-app/main/default/objects/Client_Acceptance_Form__c/fields/Other_billing_opportunities__c.field-meta.xml
<CustomField>
    <fullName>Other_billing_opportunities__c</fullName>
    <label>Other billing opportunities</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>