force-app/main/default/objects/Client_Acceptance_Form__c/fields/Other_comments_relating_to_fee__c.field-meta.xml
<CustomField>
    <fullName>Other_comments_relating_to_fee__c</fullName>
    <label>Other comments relating to fee</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>