force-app/main/default/objects/Client_Acceptance_Form__c/fields/Other_CP_services__c.field-meta.xml
<CustomField>
    <fullName>Other_CP_services__c</fullName>
    <label>Other CP services</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>