force-app/main/default/objects/Client_Acceptance_Form__c/fields/Other_CPContact__c.field-meta.xml
<CustomField>
    <fullName>Other_CPContact__c</fullName>
    <label>Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>