force-app/main/default/objects/Client_Acceptance_Form__c/fields/Other_fixed_assets_excluding_goodwill__c.field-meta.xml
<CustomField>
    <fullName>Other_fixed_assets_excluding_goodwill__c</fullName>
    <label>Other fixed assets (excluding goodwill)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>