force-app/main/default/objects/Client_Acceptance_Form__c/fields/Other_net_assets__c.field-meta.xml
<CustomField>
    <fullName>Other_net_assets__c</fullName>
    <label>Other net assets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>