force-app/main/default/objects/Client_Acceptance_Form__c/fields/Other_please_specify__c.field-meta.xml
<CustomField>
    <fullName>Other_please_specify__c</fullName>
    <label>Other (please specify)</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>