force-app/main/default/objects/Client_Acceptance_Form__c/fields/Other_Service_Line_Involvement__c.field-meta.xml
<CustomField>
    <fullName>Other_Service_Line_Involvement__c</fullName>
    <label>Other Service Line Involvement</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>