force-app/main/default/objects/Client_Acceptance_Form__c/fields/Other_team_members__c.field-meta.xml
<CustomField>
    <fullName>Other_team_members__c</fullName>
    <label>Other team members</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>