force-app/main/default/objects/Client_Acceptance_Form__c/fields/Partner_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Partner_Responsibility__c</fullName>
    <label>Partner Responsibility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>