force-app/main/default/objects/Client_Acceptance_Form__c/fields/pc1__c.field-meta.xml
<CustomField>
    <fullName>pc1__c</fullName>
    <description>Please embed any supporting documents here :</description>
    <label>Please embed any supporting documents he</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>