force-app/main/default/objects/Client_Acceptance_Form__c/fields/Personal_Tax_Partner__c.field-meta.xml
<CustomField>
    <fullName>Personal_Tax_Partner__c</fullName>
    <label>Personal Tax Partner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>