force-app/main/default/objects/Client_Acceptance_Form__c/fields/pickfin1__c.field-meta.xml
<CustomField>
    <fullName>pickfin1__c</fullName>
    <description>Is a liability cap to be incorporated?</description>
    <label>Is a liability cap to be incorporated?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>