force-app/main/default/objects/Client_Acceptance_Form__c/fields/pickfin3__c.field-meta.xml
<CustomField>
    <fullName>pickfin3__c</fullName>
    <description>Are you satisfied that the client can pay as stated above?</description>
    <label>Are you satisfied that the client can pa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>