force-app/main/default/objects/Client_Acceptance_Form__c/fields/pickfin4__c.field-meta.xml
<CustomField>
    <fullName>pickfin4__c</fullName>
    <description>Is any part of the fee contingent?</description>
    <label>Is any part of the fee contingent?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>