force-app/main/default/objects/Client_Acceptance_Form__c/fields/pickfinyes1__c.field-meta.xml
<CustomField>
    <fullName>pickfinyes1__c</fullName>
    <description>If Yes, please specify Service Line here</description>
    <label>If Yes, please specify Service Line here</label>
    <length>255</length>
    <type>Text</type>
</CustomField>