force-app/main/default/objects/Client_Acceptance_Form__c/fields/pickfinyes4__c.field-meta.xml
<CustomField>
    <fullName>pickfinyes4__c</fullName>
    <description>If yes, summarise the contingent arrangement below :</description>
    <label>If yes, summarise the contingent arrange</label>
    <length>255</length>
    <type>Text</type>
</CustomField>