force-app/main/default/objects/Client_Acceptance_Form__c/fields/pickfinyes5__c.field-meta.xml
<CustomField>
    <fullName>pickfinyes5__c</fullName>
    <description>If yes, please give details :</description>
    <label>If yes, please give details:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>