force-app/main/default/objects/Client_Acceptance_Form__c/fields/pickint1__c.field-meta.xml
<CustomField>
    <fullName>pickint1__c</fullName>
    <description>Is there anything unusual or suspicious about the client or transaction ?</description>
    <label>Is there anything unusual or suspicious</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>