force-app/main/default/objects/Client_Acceptance_Form__c/fields/pickint2__c.field-meta.xml
<CustomField>
    <fullName>pickint2__c</fullName>
    <description>Have we any reason to suspect a lack of integrity ?</description>
    <inlineHelpText>Have we any reason to suspect a lack of integrity ?</inlineHelpText>
    <label>Have we any reason to suspect a lack of</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>