force-app/main/default/objects/Client_Acceptance_Form__c/fields/pickintyes1__c.field-meta.xml
<CustomField>
    <fullName>pickintyes1__c</fullName>
    <description>If yes, has a report been made to the MLRO? If not, please make additional notes below :</description>
    <label>If yes, has a report been made to the ML</label>
    <length>255</length>
    <type>Text</type>
</CustomField>