force-app/main/default/objects/Client_Acceptance_Form__c/fields/pickintyes2__c.field-meta.xml
<CustomField>
    <fullName>pickintyes2__c</fullName>
    <description>If yes, please explain below :</description>
    <label>If yes, please explain below:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>