force-app/main/default/objects/Client_Acceptance_Form__c/fields/Please_detail_all_other_transactional__c.field-meta.xml
<CustomField>
    <fullName>Please_detail_all_other_transactional__c</fullName>
    <label>Please detail all other transactional</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>