force-app/main/default/objects/Client_Acceptance_Form__c/fields/Please_provide_a_brief_summary__c.field-meta.xml
<CustomField>
    <fullName>Please_provide_a_brief_summary__c</fullName>
    <label>Please provide a brief summary</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>