force-app/main/default/objects/Client_Acceptance_Form__c/fields/Post_Code_Office__c.field-meta.xml
<CustomField>
    <fullName>Post_Code_Office__c</fullName>
    <label>Post Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>