force-app/main/default/objects/Client_Acceptance_Form__c/fields/Property_at_valuation__c.field-meta.xml
<CustomField>
    <fullName>Property_at_valuation__c</fullName>
    <label>Property (at valuation)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>