force-app/main/default/objects/Client_Acceptance_Form__c/fields/Proposed_liability_cap__c.field-meta.xml
<CustomField>
    <fullName>Proposed_liability_cap__c</fullName>
    <label>Proposed liability cap</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>