force-app/main/default/objects/Client_Acceptance_Form__c/fields/Ratchet__c.field-meta.xml
<CustomField>
    <fullName>Ratchet__c</fullName>
    <label>Ratchet</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>