force-app/main/default/objects/Client_Acceptance_Form__c/fields/Recurring_EBITALY__c.field-meta.xml
<CustomField>
    <fullName>Recurring_EBITALY__c</fullName>
    <label>Recurring EBITALY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>