force-app/main/default/objects/Client_Acceptance_Form__c/fields/Recurring_EBITANY__c.field-meta.xml
<CustomField>
    <fullName>Recurring_EBITANY__c</fullName>
    <label>Recurring EBITANY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>