force-app/main/default/objects/Client_Acceptance_Form__c/fields/Recurring_EBITAPNY__c.field-meta.xml
<CustomField>
    <fullName>Recurring_EBITAPNY__c</fullName>
    <label>Recurring EBITA%NY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>