force-app/main/default/objects/Client_Acceptance_Form__c/fields/Recurring_EBITATY__c.field-meta.xml
<CustomField>
    <fullName>Recurring_EBITATY__c</fullName>
    <label>Recurring EBITATY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>