force-app/main/default/objects/Client_Acceptance_Form__c/fields/regpick10__c.field-meta.xml
<CustomField>
    <fullName>regpick10__c</fullName>
    <description>Have we obtained relevant documents for subsidiaries included in this onboarding ?</description>
    <label>Have we obtained relevant documents for</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>