force-app/main/default/objects/Client_Acceptance_Form__c/fields/regpick11__c.field-meta.xml
<CustomField>
    <fullName>regpick11__c</fullName>
    <description>Are there any irregularities?</description>
    <label>Are there any irregularities?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>