force-app/main/default/objects/Client_Acceptance_Form__c/fields/regpick12__c.field-meta.xml
<CustomField>
    <fullName>regpick12__c</fullName>
    <description>If the client is in a regulated industry have we enquired about its relationship with the regulatory authorities</description>
    <label>If the client is in a regulated industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>