force-app/main/default/objects/Client_Acceptance_Form__c/fields/regpickyes11__c.field-meta.xml
<CustomField>
    <fullName>regpickyes11__c</fullName>
    <description>If &quot;YES&quot; please give details below:</description>
    <label>If &quot;YES&quot; please give details below:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>