force-app/main/default/objects/Client_Acceptance_Form__c/fields/regpickyes17__c.field-meta.xml
<CustomField>
    <fullName>regpickyes17__c</fullName>
    <description>If “Yes” please give details below:</description>
    <label>If “Yes” please give details below:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>