force-app/main/default/objects/Client_Acceptance_Form__c/fields/regpickyes19__c.field-meta.xml
<CustomField>
    <fullName>regpickyes19__c</fullName>
    <description>If not, please make additional notes below :</description>
    <inlineHelpText>If not, please make additional notes below :</inlineHelpText>
    <label>If not, please make additional notes bel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>