force-app/main/default/objects/Client_Acceptance_Form__c/fields/Sign_off_Manager__c.field-meta.xml
<CustomField>
    <fullName>Sign_off_Manager__c</fullName>
    <label>Sign off Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>