force-app/main/default/objects/Client_Acceptance_Form__c/fields/SmartSearch__c.field-meta.xml
<CustomField>
    <fullName>SmartSearch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SmartSearch</label>
    <type>Checkbox</type>
</CustomField>