force-app/main/default/objects/Client_Acceptance_Form__c/fields/Source_of_transaction__c.field-meta.xml
<CustomField>
    <fullName>Source_of_transaction__c</fullName>
    <label>Source of transaction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>