force-app/main/default/objects/Client_Acceptance_Form__c/fields/Subsidiaries_included_on_this_form__c.field-meta.xml
<CustomField>
    <fullName>Subsidiaries_included_on_this_form__c</fullName>
    <label>Subsidiaries included on this form</label>
    <length>255</length>
    <type>Text</type>
</CustomField>