force-app/main/default/objects/Client_Acceptance_Form__c/fields/Summarise_the_key_aspects_of_what_we_are__c.field-meta.xml
<CustomField>
    <fullName>Summarise_the_key_aspects_of_what_we_are__c</fullName>
    <description>Summarise the key aspects of what we are being asked to do</description>
    <label>Summarise the key aspects</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>