force-app/main/default/objects/Client_Acceptance_Form__c/fields/TurnoverLY__c.field-meta.xml
<CustomField>
    <fullName>TurnoverLY__c</fullName>
    <label>TurnoverLY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>