force-app/main/default/objects/Client_Acceptance_Form__c/fields/TurnoverNY__c.field-meta.xml
<CustomField>
    <fullName>TurnoverNY__c</fullName>
    <label>TurnoverNY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>