force-app/main/default/objects/Client_Acceptance_Form__c/fields/TurnoverTY__c.field-meta.xml
<CustomField>
    <fullName>TurnoverTY__c</fullName>
    <label>TurnoverTY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>