force-app/main/default/objects/Client_Acceptance_Form__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>BRA Risk Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CF CAF</fullName>
            </value>
            <value>
                <fullName>Business CAF</fullName>
            </value>
            <value>
                <fullName>Business Risk Assessment</fullName>
            </value>
            <value>
                <fullName>Individual Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>