force-app/main/default/objects/Client_Acceptance_Form__c/fields/Underwritten__c.field-meta.xml
<CustomField>
    <fullName>Underwritten__c</fullName>
    <label>Underwritten</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>