force-app/main/default/objects/Client_Acceptance_Form__c/fields/Utility_Bill__c.field-meta.xml
<CustomField>
    <fullName>Utility_Bill__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Utility Bill</label>
    <type>Checkbox</type>
</CustomField>