force-app/main/default/objects/Client_Acceptance_Form__c/fields/UTR__c.field-meta.xml
<CustomField>
    <fullName>UTR__c</fullName>
    <label>UTR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>