force-app/main/default/objects/Client_Acceptance_Form__c/fields/What_is_our_assessment_of_the_financial__c.field-meta.xml
<CustomField>
    <fullName>What_is_our_assessment_of_the_financial__c</fullName>
    <label>What is our assessment of the financial</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>