force-app/main/default/objects/Client_Acceptance_Form__c/fields/What_is_the_reason_for_the_change__c.field-meta.xml
<CustomField>
    <fullName>What_is_the_reason_for_the_change__c</fullName>
    <description>What is the reason for the change? Why us ?</description>
    <label>What is the reason for the change?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>