force-app/main/default/objects/Client_Acceptance_Form__c/fields/Who_at_the_client_has_authority_to_ins__c.field-meta.xml
<CustomField>
    <fullName>Who_at_the_client_has_authority_to_ins__c</fullName>
    <label>Who at the client has authority to ins</label>
    <length>255</length>
    <type>Text</type>
</CustomField>