force-app/main/default/objects/Client_Acceptance_Form__c/recordTypes/Business.recordType-meta.xml
<RecordType>
    <fullName>Business</fullName>
    <active>true</active>
    <label>Business</label>
</RecordType>